--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@stripe/stripe-js": "^1.52.1",
+    "@types/oracledb": "^6.5.1",
     "@types/request-ip": "^0.0.37",
     "@vercel/analytics": "^0.1.11",
     "axios": "^1.3.4",
@@ -44,6 +45,7 @@
     "next": "^13.2.4",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.1",
+    "oracledb": "^6.6.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
